@@ -1,7 +1,5 @@
 Bugs:
    - Make logging levels properly additive.
-   - Stats bugs?
-   - Moose tests failing - new MX::MethodAttributes helps with this somewhat.
 
    - Chained bugs in http://github.com/bobtfish/catalyst-app-bug-go_chain/tree/master
 
